syntax = "proto3";

message KeyValueStr {
    string key = 1;
    string value = 2;
}